--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>jenkins CI/CD Pipeline</title>
 <body>
-<h1>Welcome to simplilearn<h1>
+<h1>Welcome to simplilearn</h1>
 </body>
 </html>
